<resources>
    <string name="app_name">TipTime</string>
    <string name="app_title">Tip Calculator</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="how_was_the_service">How was the service</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="okay_15">Okay(15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tipamount">Tip Amount</string>
    <string name="tip_Amount">Tip Amount: %s</string>
</resources>